Compare maxY to the right thing when deciding whether to clamp it to the baselineY.  Bug 366667, r+sr=dbaron